# interview-kit

./: README.md
java/: build.gradle.kts  settings.gradle.kts
java/src/main/java/net/tarabutgateway/interview/: App.java
java/src/test/java/net/tarabutgateway/interview/: AppTest.java
js/: jest.config.js  package-lock.json  package.json
js/src/: app.js  app.test.js
kotlin/: build.gradle.kts  settings.gradle.kts
kotlin/src/main/kotlin/net/tarabutgateway/interview/: App.kt
kotlin/src/test/kotlin/net/tarabutgateway/interview/: AppTest.kt
python/: README.md  pyproject.toml
python/tests/: test_app.py
ts/: jest.config.ts  package-lock.json  package.json  tsconfig.json
ts/src/: app.test.ts  app.ts
